Padding-top increased to 2rem to force a solution to the anchor being covered by the fixed navigation bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ h1, h2, h3, h4, h5 {
 /* Creative Genres */
 
 #creative-genres {
-    padding-top: 1rem;
+    padding-top: 2rem;
     padding-bottom: 1rem;
     scroll-margin-top: 4rem; /* added to stop section header being covered by the fixed navigation */
 }
@@ -105,7 +105,7 @@ h1, h2, h3, h4, h5 {
     background-color: var(--secondary-color);
     background-image: url(../images/theatre-audience.jpeg);
     background-size: cover;
-    padding-top: 1rem;
+    padding-top: 2rem;
     padding-bottom: 1rem;
     scroll-margin-top: 4rem; /* added to stop section header being covered by the fixed navigation */
 }
